Prevent tall and thin party emblems from taking too much space
Thanks to @zarino for suggesting how to stop emblems like the tall and
thin Labour and UKIP logos from taking up too much space.

--- a/candidates/static/candidates/_people.scss
+++ b/candidates/static/candidates/_people.scss
@@ -292,5 +292,12 @@
 
 .person__party_emblem {
   text-align: center;
-  padding-bottom: 1.5em;
+  padding-bottom: 2em;
+
+  img {
+    width: auto;
+    max-height: 10em;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
